# check-print

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
check_print/: main.py
