[tool.poetry]
name = "check-print"
version = "0.1.0"
description = "Check for print statements"
authors = ["Diviyan Kalainathan"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"
pre-commit = "^2.16"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
